
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using bzr commit -m 'Comment').
  
  
  266: sluys, 26/11/2011
    - Added CMake files
    
  265: sluys, 25/11/2011
    - Rearranging directory structure:
      - created directories src/, obj/
      - moved *.c to src/
      - updated Makefile_Linux to take these new locations into account
  
  264: sluys, 25/11/2011
    - Moved from Subversion to Bazaar
    - Moved code from /trunk/ to /
  
  
=========================================================================================   
   This was the last commit to the SVN repository at NU.  This repository will be moved
   to Bazaar at SourceForge: http://spinspiral.sourceforge.net/
   Note: svn rev.262 = bzr rev.263
   
   262: sluys, 25/11/2011
     - Updated Makefile_Linux for use with lal-6.5:
       - use the -std=c99 compile flag to compile using the C99 standard (which LAL uses)
       - link against liblalinspiral
       - link against liblalframe rather than libFrame
     - call gettimeofday() according to C99 standard
     
   261: sluys, 20/11/2011
     - Added output line on downsampling
     
   259: sluys, 20/11/2010
     - Added new mass parameters to manual
   
   254: sluys, 26/10/2010
     - Replaced ABORTXLAL() with exit() since compiler complains (gcc,icc) 
       or refuses to compile (pathcc).
   
   253: sluys, 22/10/2010
     - Added formatting string literal for snprintf()
     - Implicitly cast unsigned to signed integers
     
   252: sluys, 22/10/2010
     - Fixed some issues:  removed unused variables, added headers, explicit type casting
     - Some compilers complain if x is defined but never used. Add x=x; at the *end* of the
       routine; otherwise x is undefined when doing this.
   
   251: sluys, 22/10/2010
     - Updated Makefile_Fugu
   
   249: sluys, 25/06/2010
     - Use different page sizes for manual
   
   230: sluys, 02/01/2010